RESOLVED FIXED36516
Assertion failure (willBeComposited == needsToBeComposited(layer)) in RenderLayerCompositor::computeCompositingRequirements() on hulu.com
https://bugs.webkit.org/show_bug.cgi?id=36516
Summary Assertion failure (willBeComposited == needsToBeComposited(layer)) in RenderL...
mitz
Reported 2010-03-23 21:01:35 PDT
To reproduce: go to a video page on Hulu. ASSERTION FAILED: willBeComposited == needsToBeComposited(layer) (WebCore/rendering/RenderLayerCompositor.cpp:604 void WebCore::RenderLayerCompositor::computeCompositingRequirements(WebCore::RenderLayer*, WTF::HashMap<WebCore::RenderLayer*, WebCore::IntRect, WTF::PtrHash<WebCore::RenderLayer*>, WTF::HashTraits<WebCore::RenderLayer*>, WTF::HashTraits<WebCore::IntRect> >*, WebCore::CompositingState&, bool&))
Attachments
Patch (7.84 KB, patch)
2010-04-01 16:02 PDT, Simon Fraser (smfr)
darin: review+
Alexey Proskuryakov
Comment 1 2010-03-25 10:30:44 PDT
Also, <http://www.emanueleferonato.com/2010/03/25/flash-elasticity-prototype-as3-version/>. If I comment out that assertion, I get a "!needsLayout()" one later.
Simon Fraser (smfr)
Comment 2 2010-03-26 16:53:58 PDT
I need an isSelfPaintingLayer() check in there somewhere.
Simon Fraser (smfr)
Comment 3 2010-04-01 16:02:13 PDT
Simon Fraser (smfr)
Comment 4 2010-04-01 16:46:04 PDT
Note You need to log in before you can comment on or make changes to this bug.